# my-stock-exchange-engine

./: .env  d  readme.md  roadmap.md  tgresql-x64-18
backend/: CMakeLists.txt
backend/config/: db_config.json  redis_config.json
backend/include/: database.hpp  logger.hpp  matching_engine.hpp  order.hpp  orderbook.hpp  redis_client.hpp  server.hpp  trade.hpp
backend/relay/: .env  authserver.js  package-lock.json  package.json  server.js
backend/relay/auth/: authcontrollers.js
backend/src/: database.cpp  logger.cpp  main.cpp  matching_engine.cpp  orderbook.cpp  redis_client.cpp  server.cpp
docs/: api_endpoint.md  architecture.md  roadmap.md
frontend/: package-lock.json  package.json
frontend/stock_engine/: package-lock.json  package.json
frontend/stock_engine/API/: api.ts
frontend/stock_engine/Components/: AuthGuard.tsx  Login.tsx  Navbar.tsx  OrderBook.tsx  OrderForm.tsx  Register.tsx  TradeFeed.tsx
frontend/stock_engine/app/: page.tsx
frontend/stock_engine/app/dashboard/: page.tsx
frontend/stock_engine/app/login/: page.tsx
frontend/stock_engine/app/register/: page.tsx
scripts/: auth_migration.sql  seed_db.sql
